ibm/cp4i-setup/aws/AWS ALB/Demo/3_Ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: demo-app-ingress
  namespace: demo
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
spec:
  ingressClassName: alb
  rules:
  - host: demo.cloudaise.com
    http:
      paths:
        - pathType: Exact
          path: /demo
          backend:
            service:
              name: demo-svc
              port:
                number: 80
